# blades-of-the-fallen-realm

./: .gitignore  =2.5.3  DESIGN.md  Dockerfile  README.md  SETUP.md  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/instructions/: memory.instruction.md
scripts/: run.sh
src/blades_of_the_fallen_realm/: __init__.py  __main__.py  main.py  settings.py
src/blades_of_the_fallen_realm/assets/backgrounds/: .gitkeep
src/blades_of_the_fallen_realm/assets/music/: .gitkeep
src/blades_of_the_fallen_realm/assets/sfx/: .gitkeep
src/blades_of_the_fallen_realm/characters/: __init__.py  drunn.py  sylara.py  theron.py
src/blades_of_the_fallen_realm/enemies/: __init__.py  bogwort_archer.py  bogwort_grunt.py  bogwort_witch.py  ironhide_brute.py  ironhide_ravager.py  snarlfang_rider.py  stone_troll.py
src/blades_of_the_fallen_realm/engine/: __init__.py  animation.py  camera.py  collision.py  game.py  input_handler.py  renderer.py
src/blades_of_the_fallen_realm/entities/: __init__.py  base_entity.py  enemy.py  mount.py  pickup.py  player.py
src/blades_of_the_fallen_realm/levels/: __init__.py  base_level.py  camp_scene.py  level1_stormwatch.py  level2_ironroot.py  level3_broken_shore.py  level4_bastion_keep.py  level5_shadow_gate.py
src/blades_of_the_fallen_realm/ui/: __init__.py  game_over.py  hud.py  main_menu.py  pause_menu.py
src/blades_of_the_fallen_realm/utils/: __init__.py  debug.py  spritesheet.py  tilemap.py
tests/: conftest.py  test_animation.py  test_app.py  test_base_entity.py  test_camera.py  test_collision.py  test_game.py  test_imports.py  test_input_handler.py  test_player.py  test_renderer.py  test_settings.py
(+8 files in other folders)
