[project]
name = "blades_of_the_fallen_realm"
version = "0.1.0"
description = "Blades of the Fallen Realm — A retro side-scrolling beat 'em up inspired by SEGA Golden Axe, built with PyGame."
readme = "README.md"
requires-python = ">=3.12.12,<3.13"
authors = [{ name = "Francesco Sodano" }]
license = { text = "MIT" }
dependencies = ["pygame-ce>=2.5.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["black==26.1.0", "mypy==1.19.1", "pytest==9.0.2", "pytest-cov==7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
ignore_missing_imports = false

[tool.hatch.build.targets.wheel]
packages = ["src/blades_of_the_fallen_realm"]

[tool.hatch.build.targets.wheel.force-include]
"src/blades_of_the_fallen_realm/py.typed" = "blades_of_the_fallen_realm/py.typed"
